change aggragate to use sdk14, tweak n-best